--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -3,6 +3,22 @@
 @{
     ViewData["Title"] = "Home page";
 }
+<form action="/SubmitForm" method="post">
+    <input type="submit" value="Submit">
+</form>
+<input action="/SubmitForm" method="post" type="submit" value="Submit">
+
+<form action="/SubmitForm" method="post">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name"><br><br>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email"><br><br>
+
+    <input type="submit" value="Submit">
+</form>
+
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -165,8 +181,7 @@
     </section>
     <br>
     <br>
-
-    <form action="/Form/submit-form" method="post">
+    <form action="/Form/SubmitForm" method="post">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name"><br><br>
 
@@ -175,13 +190,21 @@
 
         <input type="submit" value="Submit">
     </form>
-    <form action="/submit-form" method="POST">
+    <form action="/SubmitForm" method="post">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name"><br><br>
 
         <label for="email">Email:</label>
         <input type="email" id="email" name="email"><br><br>
 
+        <input type="submit" value="Submit">
+    </form>
+    <form action="/SubmitForm" method="post">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name"><br><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email"><br><br>
         <input type="submit" value="Submit">
     </form>
 
